# grug-ls

./: .gitignore  Cargo.toml  README.md  log.txt  start.lua
src/: lib.rs  main.rs  rpc.rs  server.rs
src/server/: completion.rs  document.rs  formatting.rs  goto_definition.rs  helper.rs  hover.rs  init.rs  mod_api.rs  rename.rs  text_sync.rs  utils.rs
src/server/mod_api/: parse.rs
test/: mod_api.json
test/mods/rpg-7/: rpg_7-gun.grug
test/mods/vanilla/m60/: m60-gun.grug
