[package]
name = "grug-ls"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
log = "0.4.28"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
notify = "8.2.0"
serde = {version = "1.0.219", features=["derive"]}
serde_json = "1.0.143"
serde_repr = "0.1.20"
structured-logger = { version = "1.0.4", features = ["log-panic"] }
tree-sitter = "0.25.8"
tree-sitter-grug = "0.2.2"
vfs = "0.12.2"
