[package]
name = "grug-ls"
description = "A Language Server for the grug language"
authors = ["xijnim <xijnin@gmail.com>"]
readme = "README.md"
keywords = ["lsp", "grug"]
license = "MIT"
version = "0.1.0"
edition = "2024"
categories = ["language-server", "developer-tools", "text-editors"]
repository = "https://github.com/xijnim/grug-ls.git"

[dependencies]
chrono = "0.4.41"
log = "0.4.28"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
notify = "8.2.0"
serde = {version = "1.0.219", features=["derive"]}
serde_json = "1.0.143"
serde_repr = "0.1.20"
structured-logger = { version = "1.0.4", features = ["log-panic"] }
tree-sitter = "0.25.8"
tree-sitter-grug = "0.2.2"
vfs = "0.12.2"
